fix the leaflet map z-index

--- a/css/portfolio_style.css
+++ b/css/portfolio_style.css
@@ -116,6 +116,7 @@
   min-width: 300px;
   min-height: 300px;
   border-radius: 5px;
+  z-index: 0;
 }
 
 .contact-icon{
